src/test/ui/builtin-superkinds/builtin-superkinds-in-metadata.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-in-metadata.rs:13:23
   |
LL | impl <T:Sync+'static> RequiresRequiresShareAndSend for X<T> { }
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
   |
   = help: within `X<T>`, the trait `std::marker::Send` is not implemented for `T`
   = note: required because it appears within the type `X<T>`
help: consider further restricting this bound
   |
LL | impl <T:Sync+'static + std::marker::Send> RequiresRequiresShareAndSend for X<T> { }
   |                      ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
